cambio: nuevo nombre
Se relaciona con #12

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Web</title>
+  <title>Angular Hispano</title>
+  <link rel="canonical" href="https://angular.lat">
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+
+  <meta name="description" content="La Comunidad Angular que habla castellano.">
+  <meta name="keywords" content="Angular, Comunidad, castellano, desarrollo, web">
+  <meta name="author" content="Michael Prentice">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <app-root></app-root>
