añadir: código de conducta
typography

Closes #3

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -30,7 +30,7 @@
     gtag('config', 'UA-137467404-1');
   </script>
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
