refactor(index): agrega metatags para mejorar SEO

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -13,14 +13,29 @@
   <meta name="description" content="La Comunidad Angular de habla castellana.">
   <meta name="keywords" content="Angular, Comunidad, castellano, desarrollo, web">
   <meta name="author" content="Michael Prentice">
+  <!--Twitter Open Graph-->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@AngularHispana" />
+  <meta name="twitter:creator" content="@AngularHispana" />
+  <meta name="twitter:title" content="Angular Hispano" />
+  <meta name="twitter:description" content="La Comunidad Angular de habla castellana." />
+  <!--Facebook Open Graph-->
+  <meta property="og:url" content="https://angular.lat/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Angular Hispano" />
+  <meta property="og:description" content="La Comunidad Angular de habla castellana." />
+  <meta property="og:image" content="assets/angular.png" />
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="150" />
+  <meta property="og:image:height" content="150" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137467404-1"></script>
   <script>
@@ -29,6 +44,16 @@
     gtag('js', new Date());
     gtag('config', 'UA-137467404-1');
   </script>
+  <!--Datos Estructurados-->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://angular.lat/",
+      "name": "Angular Hispano"
+    }
+  </script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
