fix: Facebook image recognition
registrar robots.txt y sitemap.xml con CLI assets
corregir error de descripción corto de LinkedIn

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="es" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
   <title>Angular Hispano</title>
@@ -10,7 +10,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <meta name="description" content="La Comunidad Angular de habla castellana.">
+  <meta name="description" content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana.">
   <meta name="keywords" content="Angular, Comunidad, castellano, desarrollo, web">
   <meta name="author" content="Michael Prentice">
 
@@ -30,8 +30,9 @@
   <meta property="og:locale" content="es_LA">
   <meta property="fb:admins" content="Splaktar"/>
   <meta property="fb:pages" content="ComunidadAngularHispano"/>
-  <meta property="og:description" content="La Comunidad Angular de habla castellana." />
-  <meta property="og:image" content="https://angular.lat/assets/site-preview.png" />
+  <meta property="og:description" content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana." />
+  <meta property="og:image" content="http://angular.lat/assets/site-preview.png" />
+  <meta property="og:image:secure_url" content="https://angular.lat/assets/site-preview.png" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1220" />
   <meta property="og:image:height" content="860" />
