--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
   <meta name="description" content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana.">
-  <meta name="keywords" content="Angular, Comunidad, castellano, desarrollo, web">
+  <meta name="keywords" content="angular, comunidad, castellano, castellana, desarrollo, web, español, espanol, spanish, hispano, hispana, javascript, typescript, css">
   <meta name="author" content="Michael Prentice">
 
   <!--Twitter card metadata-->
