--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -1,76 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es" prefix="og: http://ogp.me/ns#">
-<head>
-  <meta charset="utf-8">
-  <title>Angular Hispano</title>
-  <link rel="canonical" href="https://angular.lat">
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Angular Hispano</title>
+    <link rel="canonical" href="https://angular.lat" />
+    <base href="/" />
 
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes"
+    />
 
-  <meta name="description" content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana.">
-  <meta name="keywords" content="angular, comunidad, castellano, castellana, desarrollo, web, español, espanol, spanish, hispano, hispana, javascript, typescript, css">
-  <meta name="author" content="Michael Prentice">
+    <meta
+      name="description"
+      content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana."
+    />
+    <meta
+      name="keywords"
+      content="angular, comunidad, castellano, castellana, desarrollo, web, español, espanol, spanish, hispano, hispana, javascript, typescript, css"
+    />
+    <meta name="author" content="Michael Prentice" />
 
-  <!--Twitter card metadata-->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@AngularHispana" />
-  <meta name="twitter:creator" content="@AngularHispana" />
-  <meta name="twitter:title" content="Angular Hispano" />
-  <meta name="twitter:description" content="La Comunidad Angular de habla castellana." />
-  <meta name="twitter:image" content="https://angular.lat/assets/site-preview.png">
+    <!--Twitter card metadata-->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@AngularHispana" />
+    <meta name="twitter:creator" content="@AngularHispana" />
+    <meta name="twitter:title" content="Angular Hispano" />
+    <meta name="twitter:description" content="La Comunidad Angular de habla castellana." />
+    <meta name="twitter:image" content="https://angular.lat/assets/site-preview.png" />
 
-  <!--Facebook Open Graph-->
-  <meta property="og:url" content="https://angular.lat/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Angular Hispano" />
-  <meta property="og:site_name" content="Angular Hispano">
-  <meta property="og:locale" content="es_LA">
-  <meta property="fb:admins" content="Splaktar"/>
-  <meta property="fb:pages" content="ComunidadAngularHispano"/>
-  <meta property="og:description" content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana." />
-  <meta property="og:image" content="http://angular.lat/assets/site-preview.png" />
-  <meta property="og:image:secure_url" content="https://angular.lat/assets/site-preview.png" />
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1220" />
-  <meta property="og:image:height" content="860" />
+    <!--Facebook Open Graph-->
+    <meta property="og:url" content="https://angular.lat/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Angular Hispano" />
+    <meta property="og:site_name" content="Angular Hispano" />
+    <meta property="og:locale" content="es_LA" />
+    <meta property="fb:admins" content="Splaktar" />
+    <meta property="fb:pages" content="ComunidadAngularHispano" />
+    <meta
+      property="og:description"
+      content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana."
+    />
+    <meta property="og:image" content="http://angular.lat/assets/site-preview.png" />
+    <meta property="og:image:secure_url" content="https://angular.lat/assets/site-preview.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1220" />
+    <meta property="og:image:height" content="860" />
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137467404-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-137467404-1');
-  </script>
-  <!--Datos Estructurados-->
-  <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "Organization",
-      "name": "Angular Hispano",
-      "description": "La Comunidad Angular de habla castellana.",
-      "url": "https://angular.lat",
-      "logo": "https://angular.lat/assets/angular.png",
-      "image": "https://angular.lat/assets/site-preview.png",
-      "sameAs": [
-        "https://twitter.com/AngularHispana",
-        "https://www.facebook.com/ComunidadAngularHispano"
-      ]
-    }
-  </script>
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
-<body class="mat-typography">
-  <app-root></app-root>
-</body>
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137467404-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'UA-137467404-1');
+    </script>
+    <!--Datos Estructurados-->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Angular Hispano",
+        "description": "La Comunidad Angular de habla castellana.",
+        "url": "https://angular.lat",
+        "logo": "https://angular.lat/assets/angular.png",
+        "image": "https://angular.lat/assets/site-preview.png",
+        "sameAs": [
+          "https://twitter.com/AngularHispana",
+          "https://www.facebook.com/ComunidadAngularHispano"
+        ]
+      }
+    </script>
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
+  </head>
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
 </html>
