--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -67,6 +67,8 @@
       ]
     }
   </script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
