--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -22,6 +22,17 @@
       content="angular, comunidad, castellano, castellana, desarrollo, web, español, espanol, spanish, hispano, hispana, javascript, typescript, css"
     />
     <meta name="author" content="Michael Prentice" />
+    <meta name="application-name" content="Angular Hispano" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#1976d2" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <meta name="msapplication-TileColor" content="#1976d2" />
+    <meta name="msapplication-config" content="/assets/icons/browserconfig.xml" />
+    <meta name="theme-color" content="#1976d2" />
 
     <!--Twitter card metadata-->
     <meta name="twitter:card" content="summary" />
@@ -49,10 +60,10 @@
     <meta property="og:image:width" content="1220" />
     <meta property="og:image:height" content="860" />
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
+    <link rel="dns-prefetch" href="https://www.google-analytics.com" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -81,10 +92,9 @@
         ]
       }
     </script>
-    <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <noscript>Please enable JavaScript to use this application.</noscript>
   </body>
 </html>
