--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -60,7 +60,10 @@
     <meta property="og:image:width" content="1220" />
     <meta property="og:image:height" content="860" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <link rel="dns-prefetch" href="https://www.google-analytics.com" />
