refactor: habla castellano a hispanohablante

--- a/projects/web/src/index.html
+++ b/projects/web/src/index.html
@@ -15,11 +15,11 @@
 
     <meta
       name="description"
-      content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana."
+      content="La Comunidad Angular hispanohablante. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla español."
     />
     <meta
       name="keywords"
-      content="angular, comunidad, castellano, castellana, desarrollo, web, español, espanol, spanish, hispano, hispana, javascript, typescript, css"
+      content="angular, comunidad, desarrollo, web, español, espanol, spanish, hispano, hispana, javascript, typescript, css"
     />
     <meta name="author" content="Michael Prentice" />
     <meta name="application-name" content="Angular Hispano" />
@@ -39,7 +39,7 @@
     <meta name="twitter:site" content="@AngularHispana" />
     <meta name="twitter:creator" content="@AngularHispana" />
     <meta name="twitter:title" content="Angular Hispano" />
-    <meta name="twitter:description" content="La Comunidad Angular de habla castellana." />
+    <meta name="twitter:description" content="La Comunidad Angular hispanohablante." />
     <meta name="twitter:image" content="https://angular.lat/assets/site-preview.png" />
 
     <!--Facebook Open Graph-->
@@ -52,7 +52,7 @@
     <meta property="fb:pages" content="ComunidadAngularHispano" />
     <meta
       property="og:description"
-      content="La Comunidad Angular de habla castellana. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla castellana."
+      content="La Comunidad Angular hispanohablante. Nuestra misión: ayudar al crecimiento profesional de desarrolladores Angular de habla español."
     />
     <meta property="og:image" content="http://angular.lat/assets/site-preview.png" />
     <meta property="og:image:secure_url" content="https://angular.lat/assets/site-preview.png" />
@@ -74,7 +74,7 @@
         "@context": "http://schema.org",
         "@type": "Organization",
         "name": "Angular Hispano",
-        "description": "La Comunidad Angular de habla castellana.",
+        "description": "La Comunidad Angular hispanohablante.",
         "url": "https://angular.lat",
         "logo": "https://angular.lat/assets/angular.png",
         "image": "https://angular.lat/assets/site-preview.png",
